extends CanvasLayer
class_name MissionMap
## ä»»åŠ¡åœ°å›¾ â€” è¦†ç›–å±‚åœºæ™¯ï¼Œæ˜¾ç¤ºç›®çš„åœ°å›¾æ ‡ï¼Œç‚¹å‡»å¼¹å‡ºè¯¥ç›®çš„åœ°çš„ä»»åŠ¡é¢æ¿

signal mission_confirmed(mission_id: String)
signal canceled

@onready var map_container: Control = $MapContainer
@onready var detail_panel: PanelContainer = $DetailPanel
@onready var detail_title: Label = $DetailPanel/MarginContainer/VBox/Title
@onready var detail_missions: VBoxContainer = $DetailPanel/MarginContainer/VBox/MissionList
@onready var detail_info: RichTextLabel = $DetailPanel/MarginContainer/VBox/Info
@onready var confirm_button: Button = $DetailPanel/MarginContainer/VBox/Buttons/Confirm
@onready var cancel_detail_button: Button = $DetailPanel/MarginContainer/VBox/Buttons/Cancel
@onready var close_button: Button = $TopBar/CloseButton
@onready var day_label: Label = $TopBar/DayLabel
@onready var phase_label: Label = $TopBar/PhaseLabel
@onready var pollution_label: Label = $TopBar/PollutionLabel

var _destinations: Array[Dictionary] = []
var _destination_buttons: Array[Button] = []
var _current_dest_id: String = ""
var _current_missions: Array[Dictionary] = []
var _selected_mission_index: int = -1


func _ready() -> void:
	close_button.pressed.connect(_on_close_pressed)
	confirm_button.pressed.connect(_on_confirm_pressed)
	cancel_detail_button.pressed.connect(_on_cancel_detail)
	detail_panel.visible = false

	_update_top_bar()
	_build_destination_icons()


func open() -> void:
	visible = true
	_update_top_bar()
	_refresh_destination_states()
	detail_panel.visible = false


func close() -> void:
	visible = false


func _update_top_bar() -> void:
	day_label.text = "ç¬¬ %d å¤©" % GameManager.day
	var phase_text: String = MissionData.get_phase_label(GameManager.time_phase)
	var remaining: int = GameManager.get_remaining_time_phases()
	phase_label.text = "æ—¶æ®µï¼š%sï¼ˆå‰©ä½™ %dï¼‰" % [phase_text, remaining]
	pollution_label.text = "æ±¡æŸ“åº¦ï¼š%d" % GameManager.pollution


func _build_destination_icons() -> void:
	"""æ ¹æ® DESTINATIONS åœ¨åœ°å›¾ä¸Šåˆ›å»ºæŒ‰é’®å›¾æ ‡"""
	_destinations = MissionData.get_all_destinations()

	for dest in _destinations:
		var btn: Button = Button.new()
		btn.name = "Dest_" + str(dest.get("id", ""))
		btn.text = str(dest.get("name", "???"))
		btn.custom_minimum_size = Vector2(100, 40)

		# å®šä½ï¼šå½’ä¸€åŒ–åæ ‡æ˜ å°„åˆ° map_container å¤§å°
		var map_pos: Vector2 = dest.get("map_position", Vector2(0.5, 0.5))
		btn.position = Vector2(map_pos.x * 900, map_pos.y * 500)
		btn.add_theme_font_size_override("font_size", 13)

		var dest_id: String = str(dest.get("id", ""))
		btn.pressed.connect(_on_destination_clicked.bind(dest_id))

		map_container.add_child(btn)
		_destination_buttons.append(btn)


func _refresh_destination_states() -> void:
	"""æ›´æ–°æ¯ä¸ªç›®çš„åœ°æŒ‰é’®çš„å¯ç”¨/å·²å®ŒæˆçŠ¶æ€"""
	for i in range(_destinations.size()):
		var dest: Dictionary = _destinations[i]
		var btn: Button = _destination_buttons[i]
		var mission_ids: Array = dest.get("missions", [])

		var has_unlocked: bool = false
		var all_cleared: bool = true
		for mid in mission_ids:
			if GameManager.is_mission_unlocked(str(mid)):
				has_unlocked = true
			if GameManager.get_mission_clear_count(str(mid)) == 0:
				all_cleared = false

		if not has_unlocked:
			btn.disabled = true
			btn.modulate = Color(0.5, 0.5, 0.5)
			btn.tooltip_text = "å°šæœªè§£é”"
		elif all_cleared and mission_ids.size() > 0:
			btn.disabled = false
			btn.modulate = Color(0.4, 1.0, 0.4)
			btn.tooltip_text = "å·²å…¨éƒ¨é€šå…³"
		else:
			btn.disabled = false
			btn.modulate = Color(1.0, 1.0, 1.0)
			btn.tooltip_text = ""


func _on_destination_clicked(dest_id: String) -> void:
	"""ç‚¹å‡»ç›®çš„åœ°å›¾æ ‡ â†’ æ‰“å¼€è¯¥ç›®çš„åœ°çš„ä»»åŠ¡é¢æ¿"""
	_current_dest_id = dest_id
	_current_missions = MissionData.get_missions_for_destination(dest_id)

	var dest: Dictionary = MissionData.get_destination(dest_id)
	detail_title.text = str(dest.get("name", "æœªçŸ¥åŒºåŸŸ"))

	# æ¸…ç©ºä»»åŠ¡åˆ—è¡¨
	for child in detail_missions.get_children():
		child.queue_free()

	_selected_mission_index = -1

	# æ„å»ºä»»åŠ¡æŒ‰é’®
	for i in range(_current_missions.size()):
		var m: Dictionary = _current_missions[i]
		var mid: String = str(m.get("id", ""))
		var unlocked: bool = GameManager.is_mission_unlocked(mid)
		var difficulty: int = int(m.get("difficulty", 1))
		var stars: String = "â˜…".repeat(difficulty)
		var clear_count: int = GameManager.get_mission_clear_count(mid)

		var btn: Button = Button.new()
		btn.custom_minimum_size = Vector2(0, 50)
		btn.size_flags_horizontal = Control.SIZE_EXPAND_FILL

		var label_text: String = "%s %s" % [stars, str(m.get("name", "æœªå‘½å"))]
		if clear_count > 0:
			label_text += "  (å·²é€šå…³ %d æ¬¡)" % clear_count
		if not unlocked:
			var unlock_hint: String = _get_unlock_hint(m)
			label_text += "  [æœªè§£é”]"
			if not unlock_hint.is_empty():
				btn.tooltip_text = unlock_hint
			btn.modulate = Color(0.6, 0.6, 0.6)
		btn.text = label_text
		btn.pressed.connect(_on_mission_button_pressed.bind(i))
		detail_missions.add_child(btn)

		# ç¬¬ä¸€ä¸ªå¯ç”¨çš„è‡ªåŠ¨é€‰ä¸­
		if _selected_mission_index < 0 and unlocked:
			_selected_mission_index = i

	if _selected_mission_index >= 0:
		_update_mission_info(_selected_mission_index)
	else:
		detail_info.text = "è¯¥åŒºåŸŸæš‚æ— å¯ç”¨ä»»åŠ¡ã€‚"
		confirm_button.disabled = true

	detail_panel.visible = true


func _on_mission_button_pressed(index: int) -> void:
	_selected_mission_index = index
	_update_mission_info(index)


func _update_mission_info(index: int) -> void:
	if index < 0 or index >= _current_missions.size():
		return

	var mission: Dictionary = _current_missions[index]
	var mid: String = str(mission.get("id", ""))
	var desc: String = str(mission.get("description", ""))
	var time_cost: int = MissionData.get_time_cost(mission)
	var allow_phases: Array = mission.get("allow_phases", [])
	var phase_labels_text: String = MissionData.get_phase_labels(allow_phases)
	if phase_labels_text.is_empty():
		phase_labels_text = "ä»»æ„"

	var current_pollution: int = GameManager.pollution
	var victory_pollution: int = MissionData.calc_pollution_after(current_pollution, mission, "victory")
	var defeat_pollution: int = MissionData.calc_pollution_after(current_pollution, mission, "defeat")

	var text: String = ""
	text += "[b]%s[/b]\n" % str(mission.get("name", ""))
	text += "éš¾åº¦ï¼š%s\n" % MissionData.get_difficulty_stars(mission)
	text += "%s\n\n" % desc

	# å¥–åŠ±é¢„è§ˆ
	var reward_preview: String = str(mission.get("reward_preview", ""))
	if not reward_preview.is_empty():
		text += "[u]é€šå…³å¥–åŠ±[/u]\n"
		text += "  [color=#88cc88]%s[/color]\n\n" % reward_preview

	# ç›®æ ‡åˆ—è¡¨
	text += "[u]ç›®æ ‡[/u]\n"
	var objectives: Array = MissionData.get_objectives(mission)
	var completed_objs: Array = GameManager.get_mission_completed_objectives(mid)
	for obj in objectives:
		var is_primary: bool = obj.get("primary", false)
		var tag: String = "[ä¸»]" if is_primary else "[æ¬¡]"
		var obj_name: String = str(obj.get("display_name", ""))
		var obj_id: String = str(obj.get("id", ""))
		var done: bool = obj_id in completed_objs

		if done:
			text += "  %s %s  [color=green]âœ“[/color]\n" % [tag, obj_name]
		else:
			text += "  %s %s\n" % [tag, obj_name]

	# å‡ºå‡»è´¹ç”¨
	var sortie_cost: Dictionary = GameManager.get_total_sortie_cost()
	var cost_text: String = EquipmentCostData.format_cost(sortie_cost)
	text += "\n[u]å‡ºå‡»è´¹ç”¨[/u]\n"
	text += "  %s\n" % cost_text
	if not sortie_cost.is_empty():
		text += "  é‡‘å¸ä½™é¢ï¼š%d\n" % GameManager.money
		for res_type in sortie_cost:
			if res_type == "money":
				continue
			var owned: int = int(GameManager.materials.get(res_type, 0))
			var needed: int = int(sortie_cost[res_type])
			var color: String = "green" if owned >= needed else "red"
			text += "  %sï¼š[color=%s]%d[/color] / %d\n" % [
				EquipmentCostData.get_material_name(res_type), color, owned, needed]

	text += "\næ¶ˆè€—æ—¶æ®µï¼š%s\n" % str(time_cost)
	text += "å¯å‡ºå‡»æ—¶æ®µï¼š%s\n" % phase_labels_text
	text += "èƒœåˆ©æ±¡æŸ“ï¼š%s â†’ %s\n" % [str(current_pollution), str(victory_pollution)]
	text += "å¤±è´¥æ±¡æŸ“ï¼š%s â†’ %s\n" % [str(current_pollution), str(defeat_pollution)]

	detail_info.bbcode_enabled = true
	detail_info.text = text

	# æœªè§£é”ä»»åŠ¡æ˜¾ç¤ºè§£é”æ¡ä»¶
	if not GameManager.is_mission_unlocked(mid):
		var unlock_hint: String = _get_unlock_hint(mission)
		if not unlock_hint.is_empty():
			text += "\n[color=#ffcc00]ğŸ”’ %s[/color]\n" % unlock_hint
		detail_info.text = text
		confirm_button.disabled = true
		confirm_button.text = "å°šæœªè§£é”"
		return

	# æ£€æŸ¥èƒ½å¦å‡ºå‡»
	var reason: String = _get_unavailable_reason(mission)
	if reason.is_empty():
		confirm_button.disabled = false
		confirm_button.text = "ç¡®è®¤å‡ºå‡»"
	else:
		confirm_button.disabled = true
		confirm_button.text = reason


func _get_unlock_hint(mission: Dictionary) -> String:
	var condition: Dictionary = mission.get("unlock_condition", {})
	if condition.is_empty():
		return ""
	var required_count: int = int(condition.get("clear_count", 1))
	if condition.has("clear_mission"):
		var req_id: String = str(condition["clear_mission"])
		var req_mission: Dictionary = MissionData.get_mission(req_id)
		var req_name: String = str(req_mission.get("name", req_id))
		if required_count <= 1:
			return "éœ€è¦é€šå…³ã€Œ%sã€" % req_name
		return "éœ€è¦é€šå…³ã€Œ%sã€%d æ¬¡" % [req_name, required_count]
	if condition.has("clear_any"):
		var req_ids: Array = condition["clear_any"]
		var names: Array[String] = []
		for rid in req_ids:
			var req_m: Dictionary = MissionData.get_mission(str(rid))
			names.append(str(req_m.get("name", rid)))
		return "éœ€è¦é€šå…³ä»¥ä¸‹ä»»ä¸€ï¼š%s" % ", ".join(names)
	return ""

func _get_unavailable_reason(mission: Dictionary) -> String:
	var mid: String = str(mission.get("id", ""))
	if not GameManager.is_mission_unlocked(mid):
		return "å°šæœªè§£é”"
	if not MissionData.is_phase_allowed(mission, GameManager.time_phase):
		return "å½“å‰æ—¶æ®µä¸å¯å‡ºå‡»"
	var time_cost: int = MissionData.get_time_cost(mission)
	if time_cost > GameManager.get_remaining_time_phases():
		return "å‰©ä½™æ—¶æ®µä¸è¶³"
	if not GameManager.can_afford_sortie():
		return "èµ„æºä¸è¶³"
	return ""


func _on_confirm_pressed() -> void:
	if _selected_mission_index < 0 or _selected_mission_index >= _current_missions.size():
		return
	var mission_id: String = str(_current_missions[_selected_mission_index].get("id", ""))
	if mission_id.is_empty():
		return
	close()
	mission_confirmed.emit(mission_id)


func _on_cancel_detail() -> void:
	detail_panel.visible = false


func _on_close_pressed() -> void:
	close()
	canceled.emit()
